# knight0-training

./: .gitignore  LAUNCH_KAGGLE_TRAINING.sh  README.md  SEARCH_COMPARISON.md  behavior_clone.py  check_progress.py  curriculum_training.py  download_hf_dataset.py  download_kaggle_dataset.py  download_on_modal.py  download_processed_shards.py  evaluate_model.py  export_best_model.py  extract_worker_1.py  extract_worker_2.py  extract_worker_3.py  manage_data.py  measure_performance.py  modal_train.py  modal_train_parallel.py  nnue_training_log.txt  phase2_extractor.py  requirements.txt  run_parallel_extraction.sh  search_engine.py  search_engine_v2.py  self_play_training.py  self_sustaining_loop.py  start_phase2_now.sh  start_self_sustaining.sh  test_generalization.py  test_modal_smoke.py  test_position_learning.py  test_pytorch_model.py  test_search_comparison.py  train_on_kaggle.py  train_tiny_simple.py  training_log.txt
knight0/: __init__.py  config.py  data_augmentation.py  data_sources.py  dataset.py  deep_extract.py  encoding.py  export_onnx.py  extract_positions.py  fast_extract.py  lc0_labeler.py  model.py  position_filter.py  train_loop.py  utils.py
knight0-search-rust/: Cargo.toml  README.md  build.sh
knight0-search-rust/src/: encoding.rs  eval.rs  main.rs  move_ordering.rs  search.rs  tt.rs
